Сделал блок Наши гарантии

--- a/group_1/src/html/index.html
+++ b/group_1/src/html/index.html
@@ -51,8 +51,8 @@
                 </div>
             </div>
         </section>
-
         <!-- End Offer -->
+
         <!-- Advanced -->
         <section class="advanced">
             <div class="container">
@@ -98,6 +98,78 @@
                 </div>
             </div>
         </section>
+        <!-- End Advanced -->
+
+        <!-- Warranty -->
+        <section class="warranty">
+            <div class="container">
+                <h2 class="warranty__title h2">Наши гарантии</h2>
+            <ul class="warranty__list reset-list">
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/1.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">100% возврат предоплаты</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/2.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">Работаем по договору</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/3.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">Договор без мелкого шрифта</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/4.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">Оплата в кассу нашего автосалона или на р/с компании</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/5.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">Качество автомобиля</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="warranty-card">
+                        <div class="warranty-card__icon">
+                            <img src="./assets/images/warranty/6.svg" alt="Иконка 1">
+                        </div>
+                        <p class="warranty-card__text text">На всех этапах сделки - автомобили застрахованы</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="warranty__row">
+                <p class="warranty__text text-primary">Вы можете убедиться в прозрачности сделки скачав предварительный договор</p>
+                <a class="warranty__doc reset-link" href="#" download>
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#F50E30">
+                            <path d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M7 10L12 15L17 10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 15V3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </span>
+                    Скачать пример договора
+                </a>
+            </div>
+            </div>
+        </section>
+        <!-- End Warranty -->
 
     </main>
     <!-- End Main -->
