Сделали адаптив с 1 группой

--- a/group_1/src/html/index.html
+++ b/group_1/src/html/index.html
@@ -43,8 +43,8 @@
                     <button class="offer__btn btn reset-btn" type="button" data-a11y-dialog-show="dialog-request">Оставить заявку</button>
                     <div class="offer__img">
                         <picture>
-                            <!-- <source srcset="./assets/images/offer.avif" type="image/avif">
-                            <source srcset="./assets/images/offer.webp" type="image/webp"> -->
+                            <source srcset="./assets/images/offer.avif" type="image/avif">
+                            <source srcset="./assets/images/offer.webp" type="image/webp">
                             <img src="./assets/images/offer.png" alt="Изображение автомобиля">
                         </picture>
                     </div>
@@ -67,8 +67,8 @@
                         <p class="advanced-card__text text">Предлагаем купить автомобиль дешевле до 60%, от рыночной цены на Авито и Авто.ру</p>
                         <div class="advanced-card__img">
                             <picture>
-                                <!-- <source srcset="./assets/images/advanced/1.avif" type="image/avif"> -->
-                                <!-- <source srcset="./assets/images/advanced/1.webp" type="image/webp"> -->
+                                <source srcset="./assets/images/advanced/1.avif" type="image/avif">
+                                <source srcset="./assets/images/advanced/1.webp" type="image/webp">
                                 <img src="./assets/images/advanced/1.png" alt="Ключи">
                             </picture>
                         </div>
@@ -78,8 +78,8 @@
                         <p class="advanced-card__text text">Предлагаем Вам купить автомобиль дешевле до 60%, от рыночной цены на Авито и Авто.ру</p>
                         <div class="advanced-card__img">
                             <picture>
-                                <!-- <source srcset="./assets/images/advanced/2.avif" type="image/avif"> -->
-                                <!-- <source srcset="./assets/images/advanced/2.webp" type="image/webp"> -->
+                                <source srcset="./assets/images/advanced/2.avif" type="image/avif">
+                                <source srcset="./assets/images/advanced/2.webp" type="image/webp">
                                 <img src="./assets/images/advanced/2.png" alt="Красная машина">
                             </picture>
                         </div>
@@ -89,8 +89,8 @@
                         <p class="advanced-card__text text">Предлагаем Вам купить автомобиль дешевле до 60%, от рыночной цены на Авито и Авто.ру</p>
                         <div class="advanced-card__img">
                             <picture>
-                                <!-- <source srcset="./assets/images/advanced/3.avif" type="image/avif"> -->
-                                <!-- <source srcset="./assets/images/advanced/3.webp" type="image/webp"> -->
+                                <source srcset="./assets/images/advanced/3.avif" type="image/avif">
+                                <source srcset="./assets/images/advanced/3.webp" type="image/webp">
                                 <img src="./assets/images/advanced/3.png" alt="Рейтинг">
                             </picture>
                         </div>
@@ -170,6 +170,161 @@
             </div>
         </section>
         <!-- End Warranty -->
+
+        <!-- Catalog -->
+        <section class="catalog">
+            <div class="container">
+                <h2 class="catalog__title h2">Какие авто привозим?</h2>
+                <p class="catalog__text text-info text-info_md">Привозим авто не старше 7 лет на момент растаможки.</p>
+                <div class="catalog__slider slider">
+                    <div class="slider__wrapper">
+                        <article class="slider__slide catalog-card">
+                            <h3 class="catalog-card__title h3">Toyota RAV4 2022</h3>
+                            <div class="catalog-card__img">
+                                <picture>
+                                    <source srcset="/assets/images/catalog/1.avif" type="image/avif">
+                                    <source srcset="/assets/images/catalog/1.webp" type="image/webp">
+                                    <img src="/assets/images/catalog/1.jpg" alt="Купить Toyota RAV4 2022">
+                                </picture>
+                            </div>
+                            <ul class="catalog-card__props reset-list">
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Пробег</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">5 700 км</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Объем двигателя</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">2.0</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Мощность</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">149 л.с.</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Коробка</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">Автомат</span>
+                                </li>
+                            </ul>
+                            <div class="catalog-card__price">
+                                <span class="text">Цена на вторичном рынке в РФ</span>
+                                <span class="text-info">3 300 000 ₽</span>
+                            </div>
+                            <div class="catalog-card__price-main">
+                                <span class="text">Цена автомобиля “под ключ”</span>
+                                <span class="text-info">2 700 000 ₽</span>
+                            </div>
+                            <button class="catalog-card__btn btn reset-btn" type="button">
+                                Оставить заявку
+                            </button>
+                        </article>
+                        <article class="slider__slide catalog-card">
+                            <h3 class="catalog-card__title h3">Audi Q5 2021</h3>
+                            <div class="catalog-card__img">
+                                <picture>
+                                    <source srcset="/assets/images/catalog/2.avif" type="image/avif">
+                                    <source srcset="/assets/images/catalog/2.webp" type="image/webp">
+                                    <img src="/assets/images/catalog/2.jpg" alt="Купить Audi Q5 2021">
+                                </picture>
+                            </div>
+                            <ul class="catalog-card__props reset-list">
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Пробег</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">5 700 км</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Объем двигателя</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">2.0</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Мощность</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">149 л.с.</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Коробка</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">Автомат</span>
+                                </li>
+                            </ul>
+                            <div class="catalog-card__price">
+                                <span class="text">Цена на вторичном рынке в РФ</span>
+                                <span class="text-info">3 250 000 ₽</span>
+                            </div>
+                            <div class="catalog-card__price-main">
+                                <span class="text">Цена автомобиля “под ключ”</span>
+                                <span class="text-info">2 500 000 ₽</span>
+                            </div>
+                            <button class="catalog-card__btn btn reset-btn" type="button">
+                                Оставить заявку
+                            </button>
+                        </article>
+                        <article class="slider__slide catalog-card">
+                            <h3 class="catalog-card__title h3">Honda CR-V 2021</h3>
+                            <div class="catalog-card__img">
+                                <picture>
+                                    <source srcset="/assets/images/catalog/3.avif" type="image/avif">
+                                    <source srcset="/assets/images/catalog/3.webp" type="image/webp">
+                                    <img src="/assets/images/catalog/3.jpg" alt="Купить Honda CR-V 2021">
+                                </picture>
+                            </div>
+                            <ul class="catalog-card__props reset-list">
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Пробег</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">5 700 км</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Объем двигателя</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">2.0</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Мощность</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">149 л.с.</span>
+                                </li>
+                                <li class="catalog-card-prop">
+                                    <span class="catalog-card-prop__name text">Коробка</span>
+                                    <span class="catalog-card-prop__dashes"></span>
+                                    <span class="catalog-card-prop__value text-info">Автомат</span>
+                                </li>
+                            </ul>
+                            <div class="catalog-card__price">
+                                <span class="text">Цена на вторичном рынке в РФ</span>
+                                <span class="text-info">2 900 000 ₽</span>
+                            </div>
+                            <div class="catalog-card__price-main">
+                                <span class="text">Цена автомобиля “под ключ”</span>
+                                <span class="text-info">2 300 000 ₽</span>
+                            </div>
+                            <button class="catalog-card__btn btn reset-btn" type="button">
+                                Оставить заявку
+                            </button>
+                        </article>
+                    </div>
+                    <div class="slider__nav">
+                        <button class="slider__prev reset-btn" type="button">
+                            <span></span>
+                        </button>
+                        <button class="slider__next reset-btn" type="button">
+                            <span></span>
+                        </button>
+                    </div>
+                    <div class="slider__pagination">
+                        <div class="slider__page slider__page_active"></div>
+                        <div class="slider__page"></div>
+                        <div class="slider__page"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Catalog -->
 
     </main>
     <!-- End Main -->
